--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2358,7 +2358,7 @@ pages = {691}
 
 @TECHREPORT{MadayPateraRonquist1992,
   author = {Y. Maday and A. Patera and E. R{\o}nquist},
-  title = {The {$P^N × P^{N-2}$} method for the approximation of the
+  title = {The {$P^N \times P^{N-2}$} method for the approximation of the
   {S}tokes problem},
   institution = {Department of Mechanical Engineering, Massachusetts
   Institute of Technology},
