Add almost final version. Marie will skim through briefly.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8949,3 +8949,12 @@ pages={36-40}
 	publisher = {Springer-Verlag London Limited},
 	year = {2006}
 }
+
+
+@Book{ KennettBunge2008,
+	title = {Geophysical Continua},
+	author = {Brian L. N. Kennett and Hans-Peter Bunge},
+	publisher = {Cambridge University Press},
+	year = {2008}
+}
+
