--- a/book.tex
+++ b/book.tex
@@ -42,55 +42,55 @@
 % Use to test individual chapter
 %\fenicsinput{langtangen}\end{fullwidth}\end{document}
 
-%\input{chapters/intro/chapter.tex}
-%\fenicsinput{langtangen}
-%
-%\part{Methodology}
-%
-%\fenicsinput{kirby-7}
-%\fenicsinput{kirby-6}
-%\fenicsinput{kirby-1}
-%\fenicsinput{kirby-5}
-%\fenicsinput{logg-3}
-%\fenicsinput{oelgaard-2}
-%\fenicsinput{kirby-8}
-%\fenicsinput{kirby-4}
-%%%%\fenicsinput{hoffman-4}
-%
-%\part{Implementation}
-%
-%%%%\fenicsinput{logg-2}
-%\fenicsinput{logg-1}
-%\fenicsinput{kirby-3}
-%\fenicsinput{kirby-2}
-%\fenicsinput{wilbers}
-%\fenicsinput{alnes-3}
-%\fenicsinput{alnes-2}
-%\fenicsinput{alnes-1}
-%%\input{unfinished/hoffman-2/chapter.tex}
-%\fenicsinput{mardal-2}
-%
-%\part{Applications}
-%
-%%%%\fenicsinput{terrel}
-%\fenicsinput{kvs-1}
-%\fenicsinput{mortensen}
-%%\input{unfinished/hoffman-1/chapter.tex}
-%%%%\fenicsinput{hoffman-1}
-%\fenicsinput{selim}
-%%%%\fenicsinput{shan}
-%\fenicsinput{lopes}
-%\fenicsinput{kvs-2}
-%\fenicsinput{hentschel}
-%\fenicsinput{narayanan}
-%%%%\fenicsinput{oelgaard-1}
-%\fenicsinput{nikbakht}
-%\fenicsinput{schroll}
-%\fenicsinput{hake}
-%\fenicsinput{lezar}
+\input{chapters/intro/chapter.tex}
+\fenicsinput{langtangen}
+
+\part{Methodology}
+
+\fenicsinput{kirby-7}
+\fenicsinput{kirby-6}
+\fenicsinput{kirby-1}
+\fenicsinput{kirby-5}
+\fenicsinput{logg-3}
+\fenicsinput{oelgaard-2}
+\fenicsinput{kirby-8}
+\fenicsinput{kirby-4}
+%%%\fenicsinput{hoffman-4}
+
+\part{Implementation}
+
+%%%\fenicsinput{logg-2}
+\fenicsinput{logg-1}
+\fenicsinput{kirby-3}
+\fenicsinput{kirby-2}
+\fenicsinput{wilbers}
+\fenicsinput{alnes-3}
+\fenicsinput{alnes-2}
+\fenicsinput{alnes-1}
+%\input{unfinished/hoffman-2/chapter.tex}
+\fenicsinput{mardal-2}
+
+\part{Applications}
+
+%%%\fenicsinput{terrel}
+\fenicsinput{kvs-1}
+\fenicsinput{mortensen}
+%\input{unfinished/hoffman-1/chapter.tex}
+%%%\fenicsinput{hoffman-1}
+\fenicsinput{selim}
+%%%\fenicsinput{shan}
+\fenicsinput{lopes}
+\fenicsinput{kvs-2}
+\fenicsinput{hentschel}
+\fenicsinput{narayanan}
+%%%\fenicsinput{oelgaard-1}
+\fenicsinput{nikbakht}
+\fenicsinput{schroll}
+\fenicsinput{hake}
+\fenicsinput{lezar}
 \fenicsinput{mardal-4}
-%\fenicsinput{rognes}
-%
+\fenicsinput{rognes}
+
 %------------------------------------------------------------------------------
 % Start backmatter
 \backmatter
