not include vynnytska in the book just yet.

--- a/book.tex
+++ b/book.tex
@@ -86,7 +86,7 @@
 %%%\fenicsinput{oelgaard-1}
 \fenicsinput{nikbakht}
 \fenicsinput{schroll}
-\fenicsinput{vynnytska}
+%\fenicsinput{vynnytska}
 \fenicsinput{hake}
 \fenicsinput{lezar}
 \fenicsinput{mardal-4}
