Some .bib fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -95,7 +95,7 @@
  year={2008},
 }
 
-@ELECTRONIC{Kirby1998,
+@misc{Kirby1998,
 author= {James T. Kirby},
 title={FUNWAVE HOMEPAGE},
 year={1998},
@@ -1236,7 +1236,8 @@ pages = {691}
   year = {1997},
   volume = {34},
   pages = {664--670},
-  number = {2}
+  number = {2},
+  url = {http://dx.doi.org/10.1137/S0036142994270193}
 }
 
 @ARTICLE{BoffiBrezziGastaldi2000,
@@ -1360,14 +1361,15 @@ pages = {691}
 }
 
 @BOOK{BrennerScott2008,
-  title = {The mathematical theory of finite element methods},
+  title = {The Mathematical Theory of Finite Element Methods},
   publisher = {Springer},
   year = {2008},
   author = {Brenner, Susanne C. and Scott, L. Ridgway},
   volume = {15},
   series = {Texts in Applied Mathematics},
   address = {New York},
-  edition = {Third}
+  edition = {Third},
+  url = {http://dx.doi.org/10.1007/978-0-387-75934-0}
 }
 
 @ARTICLE{BrezziDouglas1988,
@@ -1444,17 +1446,10 @@ pages = {691}
 }
 
 @BOOK{BrezziFortin1991,
-  title = {Mixed and hybrid finite element methods},
+  title = {Mixed and Hybrid Finite Element Methods},
   publisher = {Springer-Verlag},
   year = {1991},
-  author = {F. Brezzi and M. Fortin}
-}
-
-@BOOK{BrezziFortin1991a,
-  title = {Mixed and hybrid finite element methods},
-  publisher = {Springer-Verlag},
-  year = {1991},
-  author = {Brezzi, Franco and Fortin, Michel},
+  author = {F. Brezzi and M. Fortin},
   volume = {15},
   series = {Springer Series in Computational Mathematics},
   address = {New York}
@@ -2438,19 +2433,17 @@ pages = {691}
   volume = {43},
   pages = {75--89},
   number = {1-2},
-  note = {19th Dundee Biennial Conference on Numerical Analysis (2001)}
+  note = {19th Dundee Biennial Conference on Numerical Analysis}
 }
 
 @BOOK{ElmanSilvesterWathen2005,
-  title = {Finite elements and fast iterative solvers: with applications in
-	incompressible fluid dynamics},
+  title = {Finite Elements and Fast Iterative Solvers: With Applications in
+	Incompressible Fluid Dynamics},
   publisher = {Oxford University Press},
   year = {2005},
   author = {H. C. Elman and D. J. Silvester and A. J. Wathen},
-  pages = {xiv+400},
   series = {Numerical Mathematics and Scientific Computation},
-  address = {New York},
-  isbn = {978-0-19-852868-5; 0-19-852868-X}
+  address = {Oxford},
 }
 
 @ARTICLE{ElmanSilvesterWathen2002,
@@ -5692,7 +5685,7 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   issn = {1019-7168}
 }
 
-@ELECTRONIC{LynettLiu2004,
+@misc{LynettLiu2004,
  author= {Patrick J. Lynett and Philip L.-F. Liu},
  title={COULWAVE Model Page},
  year={2004},
@@ -7765,6 +7758,7 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   volume = {1},
   pages = {73--100},
   number = {1},
+  url    = {http://dx.doi.org/10.1016/0045-7930(73)90027-3}
 }
 
 @ARTICLE{Temam1969,
@@ -8129,21 +8123,15 @@ author = {Per A. Madsen and Russel Murray and Ole R. Sørensen}
   owner = {logg},
   timestamp = {2009.06.07}
 }
-
-
 @ARTICLE{Wu1981,
- author={Theodore Y. Wu},
- journal={Journal of the Engineering Mechanics Division},
- series={Proceedings of the American Society of Civil Engineers},
- volume={107},
- number={3},
- pages={501-522},
- year={1981}
+ author = {T. Y. Wu},
+ title = {Long waves in ocean and coastal waters},
+ journal = {Journal of the Engineering Mechanics},
+ volume = {107},
+ number = {3},
+ pages = {501--522},
+ year = {1981}
 }
-
-
-
-
 
 @ARTICLE{Webb1993,
   author = {Webb, J. P.},
