More .bib fixes.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4721,13 +4721,9 @@ volume = {160},
 number = {3-4},
 pages = {337 - 358},
 year = {1998},
-issn = {0045-7825},
-doi = {DOI: 10.1016/S0045-7825(98)00293-X},
-url = {http://www.sciencedirect.com/science/article/B6V29-3WV3TR5-8/2/e1a67a14cc3962570b43c484be62994f},
+url = {http://dx.doi.org/10.1016/S0045-7825(98)00293-X},
 author = {Hans Petter Langtangen and Geir Pedersen}
 }
-
-
 
 @INPROCEEDINGS{Langtangen2007,
   author = {H. P. Langtangen},
@@ -4806,9 +4802,9 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   publisher = {Springer},
   year = {2003},
   author = {H. P. Langtangen},
-  series = {Texts in Computational Science and Engineering, vol 1},
+  series = {Texts in Computational Science and Engineering},
+  volume = {1},
   edition = {2nd},
-  note = {855 p. \url{http://www.diffpack.com}},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -4861,13 +4857,13 @@ author = {Hans Petter Langtangen and Geir Pedersen}
   timestamp = {2009.06.06}
 }
 
-@INBOOK{Langtangen2003b,
+@INCOLLECTION{Langtangen2003b,
   pages = {321-360},
   title = {Using Diffpack from Python Scripts},
   publisher = {Springer-Verlag},
   year = {2003},
   editor = {Langtangen, H.P. and Tveito, A.},
-  author = {Langtangen, H P and Mardal, K -A},
+  author = {Langtangen, H. P. and Mardal, K.-A},
   series = {Lecture Notes in Computational Science and Engineering},
   booktitle = {Advanced Topics in Computational Partial Differential Equations -
 	Numerical Methods and Diffpack Programming}
@@ -8783,35 +8779,39 @@ journal = {Rev. Geophys.},
 volume = {36},
 pages = {211-244}}
 
-@Article{Torsvik2010
-title = {Diamonds sampled by plumes from the core–mantle boundary},
+@Article{Torsvik2010,
+title = {Diamonds sampled by plumes from the core-mantle boundary},
 author = {T. H. Torsvik and K. Burke and B. Steinberger and S. J. Webb and L. D. Ashwal},
 journal = {Nature},
 volume = {466},
-year = {2010}}
+year = {2010}
+}
 
 @Article{McNamara2010,
 title = {Tracking deep mantle reservoirs with ultra-low velocity zones},
 author = {A. K. McNamara and Edward J. Garnero and S. Rost},
-journal = {Earth and planetry science letters},
+journal = {Earth and Planetry Science Letters},
 volume = {299},
 year = {2010},
-pages = {1-9}}
+pages = {1--9}
+}
 
 
 @Article{LenardicKaula1993,
-	title = {A numerical treatment of geodynamic viscous flow problems involving the advection of material interfaces },
-	author = {A. Lenardic and W.M. Kaula},
+	title = {A numerical treatment of geodynamic viscous flow problems
+	involving the advection of material interfaces },
+	author = {A. Lenardic and W. M. Kaula},
 	journal = {J. Geophys. Res.},
-	pages = {8243-8260},
+	pages = {8243--8260},
 	volume = {98},
 	number = {B5},
 	year = {1993}
 }
 
 @Article{HansenYuen1988,
-	title = {Numerical simulation of thermal-chemical instabilities at the core-mantle boundary},
-	author = {U. Hansen and D.A. Yuen },
+	title = {Numerical simulation of thermal-chemical instabilities
+	at the core-mantle boundary},
+	author = {U. Hansen and D. A. Yuen},
 	journal = {Nature},
 	pages = {237--240},
 	volume = {334},
@@ -8819,8 +8819,9 @@ pages = {1-9}}
 }
 
 @Article{KekenEtAl1997,
-	title = {A comparison of methods for the modeling of thermochemical convection },
-	author = {P.E. van Keken and S.D. King and H. Schmeling and others},
+	title = {A comparison of methods for the modeling of
+	thermochemical convection},
+	author = {van Keken, P. E.  and S. D. King and H. Schmeling and others},
 	journal = {J. Geophys. Res.},
 	pages = {22477--22495},
 	volume = {102},
@@ -8838,31 +8839,31 @@ pages = {1-9}}
 }
 
 @Book{IsmailZadehTackley2010,
-	title = {Computational methods for geodynamics},
+	title = {Computational Methods for Geodynamics},
 	author = {A. Ismail-Zadeh and P. Tackley},
 	year = {2010},
 	publisher = {Cambridge University Press}
 }
 
 @Book{Gerya2010,
-	title = {Introduction to numerical geodynamic modelling},
+	title = {Introduction to Numerical Geodynamic Modelling},
 	author = {T. Gerya},
 	publisher = {Cambridge University Press},
 	year = {2010}
 }
 
 @Book{ZienkiewiczTaylor2000,
-	title = {The finite element method},
-	author = {O.C. Zienkiewicz and R.L. Taylor},
-	publisher = {Buyyerworth-Heinemann},
+	title = {The Finite Element Method: Fluid dynamics},
+	author = {O. C. Zienkiewicz and R. L. Taylor},
+	publisher = {Butterworth-Heinemann},
 	edition = {5},
-	volume = {3: Fluid dynamics},
+	volume = {3},
 	year = {2000}
 }
 
 @Article{PietroLoForteParolini2006,
 	title = {Mass preserving finite element implementations of the level set method},
-	author = {D.A. di Pietro and S. Lo Forte and N. Parolini},
+	author = {di Pietro, D. A.  and S. Lo Forte and N. Parolini},
 	journal = {Applied Numerical Mathematics},
 	pages = {1179--1195},
 	volume = {56},
@@ -8870,8 +8871,8 @@ pages = {1-9}}
 }
 
 @Article{Arnold1982,
-	title = {An interior penalty finite element method with discontinuous elements },
-	author = {D.N. Arnold},
+	title = {An interior penalty finite element method with discontinuous elements},
+	author = {D. N. Arnold},
 	journal = {SIAM J. Numer. Anal.},
 	volume = {19},
 	number = {4},
@@ -8879,8 +8880,9 @@ pages = {1-9}}
 }
 
 @Article{KulkarniRovasTortorelli2007,
-	title = {Discontinuous {G}alerkin framework for adaptive solution of parabolic equation},
-	author = {D.V. Kulkarni  and D.V. Rovas  and D.A. Tortorelli},
+	title = {Discontinuous {G}alerkin framework for adaptive solution
+	of parabolic equation},
+	author = {D. V. Kulkarni  and D. V. Rovas  and D. A. Tortorelli},
 	journal = {Int. J. Numer. Meth. Engng},
 	pages = {1--24},
 	volume = {70},
@@ -8888,8 +8890,9 @@ pages = {1-9}}
 }
 
 @Article{BergKekenYuen1993,
-	title = {The effects of a composite non-{N}ewtonian and {N}ewtonian rheology on mantle convection},
-	author = {A.P. van den Berg and P.E. van Keken and D.A. Yuen},
+	title = {The effects of a composite non-{N}ewtonian and
+	{N}ewtonian rheology on mantle convection},
+	author = {van den Berg, A. P.  and van Keken, P. E.  and D. A. Yuen},
 	journal = {Geophys. J. Int.},
 	pages = {62--78},
 	volume = {115},
@@ -8897,7 +8900,8 @@ pages = {1-9}}
 }
 
 @Article{HansenEbel1988,
-	title = {Time-dependent thermal convection - a possible explanation for a multiscale flow in the Earth's mantle},
+	title = {Time-dependent thermal convection -- a possible
+	explanation for a multiscale flow in the Earth's mantle},
 	author = {U. Hansen  and A. Ebel},
 	journal = {Geophysical Journal},
 	pages = {181--191},
@@ -8906,7 +8910,8 @@ pages = {1-9}}
 }
 
 @article{Jarvis2007,
-title = {Survival times of subducted slab remnants in numerical models of mantle flow},
+title = {Survival times of subducted slab remnants in numerical models
+of mantle flow},
 journal = {Earth and Planetary Science Letters},
 volume = {260},
 number = {1-2},
@@ -8914,12 +8919,13 @@ pages = {23 - 36},
 year = {2007},
 note = {},
 issn = {0012-821X},
-doi = {DOI: 10.1016/j.epsl.2007.05.009},
+url = {http://dx.dot.org/10.1016/j.epsl.2007.05.009},
 author = {Gary T. Jarvis and Julian P. Lowman},
 }
 
 @article{Burke2008,
-title={Plume Generation Zones at the margins of Large Low Shear Velocity provinces on the core–mantle boundary},
+title={Plume Generation Zones at the margins of Large Low Shear Velocity
+provinces on the core–mantle boundary},
 author={K. Burke and B. Steinberger and T. H. Torsvik and M. A. Smethurst},
 journal = {Earth and Planetary Science Letters},
 year = {2008},
@@ -8928,17 +8934,19 @@ pages = {49-60}
 }
 
 @article{vanderMeer2010,
-author={D.G. van der Meer and W. Spakman and D.J.J. van Hinsbergen and M.L. Amaru and T.H. Torsvik},
+author={van der Meer, D. G.  and W. Spakman and van Hinsbergen, D. J. J. and
+M. L. Amaru and T. H. Torsvik},
 year=2010,
 title={Towards absolute plate motions constrained by lower-mantle slab remnants},
 journal={Nature Geoscience},
-volume=3,
+volume={3},
 pages={36-40}
 }
 
 @Article{MontagueKelloggManga1998,
-	title = {High Rayleigh number thermo-chemical models of a dense boundary layer in {D''} },
-	author = {N.L. Montague and H.L. Kellogg and M. Manga},
+	title = {High Rayleigh number thermo-chemical models of a dense
+	boundary layer in {D''}},
+	author = {N. L. Montague and H. L. Kellogg and M. Manga},
 	journal = {Geophys. Res. Lett.},
 	pages = {2345--2348},
 	volume = {25},
@@ -8947,7 +8955,7 @@ pages={36-40}
 }
 
 @Book{Lin2006,
-	title = {Discontinuous Finite Elements in Fluid Dynamics and Heat Transfer },
+	title = {Discontinuous Finite Elements in Fluid Dynamics and Heat Transfer},
 	series = {Computational Fluid and Solid Mechanics},
 	author = {B. Q. Lin},
 	publisher = {Springer-Verlag London Limited},
@@ -8957,7 +8965,7 @@ pages={36-40}
 
 @Book{ KennettBunge2008,
 	title = {Geophysical Continua},
-	author = {Brian L. N. Kennett and Hans-Peter Bunge},
+	author = {B. L. N. Kennett and H.-P. Bunge},
 	publisher = {Cambridge University Press},
 	year = {2008}
 }
