--- a/unfinished/terrel/chapter.tex
+++ b/unfinished/terrel/chapter.tex
@@ -11,10 +11,10 @@ problems, where theory points to a number of stable finite element
 formulations. Using automation tools, we implement and examine various
 stable formulations for the steady-state Stokes equations.  It is
 demonstrated that the expressiveness of the FEniCS Project components
-allows solvers for the Stokes problem that use specific element
+allows solvers for the Stokes problem that use various element
 formulations to be created with ease.
 %------------------------------------------------------------------------------
-\section{The Stokes equations}
+\section{Stokes equations}
 \label{sec:terrel:Stokes}
 
 The Stokes equations describe steady, incompressible low Reynolds number
@@ -35,7 +35,7 @@ where $u : \Omega \rightarrow \mathbb{R}^{d}$ is the velocity field, $p
 : \Omega \rightarrow \mathbb{R}$ is the pressure field and $f : \Omega
 \rightarrow \mathbb{R}^{d}$ is a source term.
 
-In developing a variational formulation for the Stokes equations,
+In developing a variational formulation for solving the Stokes equations,
 a possibility is to search for solutions to a variational formulation of
 \eqref{eqn:terrel:StrongStokes} in a space of divergence-free functions,
 thereby satisfying \eqref{eqn:terrel:StrongStokes_icomp} by construction.
@@ -46,10 +46,10 @@ L^2(\Omega) : \int_\Omega q \dx = 0\}$.  Given $f \in [L^{2}(\Omega)]^d$,
 find functions $u \in V$ and $p \in \Pi$ such that
 %
 \begin{align}
-    a(u, v) + b(v, p)  &=  (f, v) \quad \forall v \in V,
+    a(u, v) + b(v, p)  &=  (f, v) \quad \forall \ v \in V,
 \label{eqn:stokes_momentum}
 \\
-    b(u, q) &= 0 \quad \forall q \in \Pi,
+    b(u, q) &= 0 \quad \forall \ q \in \Pi,
 \label{eqn:stokes_continuity}
 \end{align}
 %
@@ -75,15 +75,15 @@ of fronts.  Firstly, finite element subspaces of $V$ and $\Pi$ must be
 chosen carefully to ensure stability of the resulting finite element
 problem. Secondly, the mixed variational form is a saddle point problem,
 which leads to indefinite matrix equations. Such systems are particularly
-taxing on iterative linear solvers.  Also, conservation of mass requires
+taxing on iterative linear solvers.  Moreover, conservation of mass requires
 that the velocity field is divergence-free; very few schemes can satisfy
 this condition point-wise.  The degree to which this condition is imposed
-depends on the scheme.
+depends on the specific scheme.
 
 Stable mixed finite element methods for the Stokes equations must satisfy
 the Ladyzhenskaya--\babuska--Brezzi (LBB) (or inf--sup) compatibility
 condition (see~\citet{BrezziFortin1991} for more details).  The most
-straight forward scheme -- equal-order continuous Lagrange finite element
+straightforward scheme -- equal-order continuous Lagrange finite element
 spaces for both pressure and velocity components -- leads to an unstable
 problem.  Additionally, mixed element formulations can exhibit a type of
 ``locking'', which in practice is sometimes remedied by using inexact
@@ -96,32 +96,32 @@ An approach to circumventing the difficulties associated with the
 saddle-point nature of the Stokes problem is to modify the discrete
 variational problem such that it no longer constitutes a saddle-point
 problem. With appropriate modification of the discrete problem, the
-relevant stability condition becomes the more easily to satisfied coercivity
+relevant stability condition becomes the more easily satisfied coercivity
 condition. Careful modification can lead to a discrete problem that does
 not violate consistency.
 
-Few numerical studies of the Stokes problem address more than one finite
-element formulation. This can be attributed to the difficultly in implementing
-a number of the known stable methods. With automated code generation,
-solvers for a range of methods can be easily produced; it is as simple
-as redefining the finite element spaces or modifying the variational
-formulation.  In the remainder of this section we demonstrate the
-construction of stable finite element solvers for the mixed form of the
-Stokes equations.
+Few numerical studies of the Stokes problem address more than one
+finite element formulation. This can be attributed to the difficultly
+in implementing a number of the known stable methods. With automated
+code generation, solvers for a range of methods can be easily produced;
+it is as simple as redefining the finite element spaces or modifying the
+variational formulation.  In the remainder of this section we demonstrate
+the construction of a variety stable finite element solvers for the
+mixed form of the Stokes equations.
 
 %------------------------------------------------------------------------------
 \subsection{Formulations based on compatible function spaces}
 
 We consider a number of LBB-stable formulations that are based on the
 selection of compatible functions spaces for the velocity and pressure
-fields.  The \ufl{} input for most of these formulations is shown in
-Figure~\ref{code:terrel:var:mixed}.  Using the \ufl{} standard, the
-bilinear and linear form are named {\tt a} and {\tt L}, respectively.
+fields.  The generic \ufl{} input for most of these formulations is shown in
+Figure~\ref{code:terrel:var:mixed}.  Following the \ufl{} convention, the
+bilinear and linear forms are named {\tt a} and {\tt L}, respectively.
 Different finite element spaces are defined via the element type for
 the velocity ({\tt V\_element}), the basis function order for the velocity
 ({\tt V\_order}), the element type for the pressure ({\tt P\_element}) and
 the basis function order for the pressure ({\tt P\_order}). From the input
-in Figure~\ref{code:terrel:var:mixed}, \ffc{} generates the necessary
+in Figure~\ref{code:terrel:var:mixed}, \ffc{} generates the problem-specific
 code used in numerical simulations.
 %
 \begin{figure}
@@ -145,13 +145,13 @@ L = inner(v, f)*dx
 
 One of the most widely used family of finite elements for Stokes
 equations is the Taylor--Hood family~\citep{TaylorHood1973,Boffi1997}.
-It consists of a continuous $P_k$ ($k\geq 2$) Lagrange element for
-the velocity components and a continuous $P_{k-1}$ Lagrange element
-for the pressure field (see Figure~\ref{fig:terrel:THElements}). The
-order of the pressure convergence is lower than that for the velocity.
-For the extract in Figure~\ref{code:terrel:var:mixed}, the Taylor-Hood
-element corresponds to {\tt V\_element = Lagrange}, {\tt V\_order = k},
-{\tt P\_element = Lagrange} and {\tt P\_order = k-1}.
+It consists of a continuous $P_k$ ($k\geq 2$) Lagrange element for the
+velocity components and a continuous $P_{k-1}$ Lagrange element for the
+pressure field (see Figure~\ref{fig:terrel:THElements} for the $k=3$
+case). The order of the pressure convergence is lower than that for the
+velocity.  For the \ufl{} extract in Figure~\ref{code:terrel:var:mixed},
+the Taylor-Hood element corresponds to {\tt V\_element = Lagrange},
+{\tt V\_order = k}, {\tt P\_element = Lagrange} and {\tt P\_order = k-1}.
 %
 \begin{figure}
   \center
@@ -164,7 +164,7 @@ element corresponds to {\tt V\_element = Lagrange}, {\tt V\_order = k},
 \end{figure}
 
 The Crouzeix--Raviart element~\citep{CrouzeixRaviart1973} is a
-non-conforming element that uses integral moments over the element
+non-conforming element that uses integral moments over cell
 edges as a basis for the velocity, and a discontinuous pressure space
 that is one order lower than the velocity space.  For the low-order case,
 the velocity edge moments are equivalent to evaluating Lagrange basis
@@ -188,7 +188,7 @@ illustrated in Figure~\ref{fig:terrel:MINIElement}.  The pressure
 space uses a continuous $P_{k}$ Lagrange element.  The MINI element
 was proposed as a cheaper alternative to the Taylor--Hood element. The
 MINI element is implemented using the ``element enrichment'' concept
-from \ufl{}. The \ufl{} definition of the MINI function spaces is shown
+from \ufl{}. The \ufl{} definition of the MINI function space is shown
 in Figure~\ref{code:terrel:MINI}.  At the time of writing, it is only
 implemented for $k=1, 2$.
 %
@@ -217,7 +217,7 @@ that is two orders lower for the pressure field. We loosely call
 this element ``CD'', for continuous velocity/discontinuous pressure.
 \citet{BrezziFortin1991} discuss the $P_2-P_0$ case, and higher order
 versions were analyzed in~\citet{MadayPateraRonquist1992}.  For the
-low order case, the CD method does not satisfy the LBB condition
+low-order case, the CD method does not satisfy the LBB condition
 and is commonly used with a stabilization parameter or enriched with
 bubble functions. This case is not discussed here. For higher orders the
 method is stable.  For the extract
@@ -255,8 +255,9 @@ DiscontinuousLagrange} and {\tt P\_order = k-2}.
 \end{tabular}
 \end{table}
 
-Table~\ref{tab:terrel:element_vars} summarises the variables in
-Figure~\ref{code:terrel:var:mixed} for the different methods.
+Table~\ref{tab:terrel:element_vars} summarizes the specific variables
+that appear the in the \ufl code in Figure~\ref{code:terrel:var:mixed}
+for the different presented methods.
 
 %------------------------------------------------------------------------------
 \subsection{Pressure stabilized method}
@@ -264,8 +265,8 @@ Figure~\ref{code:terrel:var:mixed} for the different methods.
 To alleviate the difficulties of finding LBB-compatible function spaces,
 one may use stabilization techniques.  Pressure stabilization converts the
 finite-dimensional formulation from a saddle point problem to a coercive
-problem. It is desirable to modify the finite-dimensional problem such
-that consistency is not violated, which is the case if stabilisation
+problem. It is usually desirable to modify the finite-dimensional problem
+such that consistency is not violated, which is the case if stabilisation
 terms depend on the equation residual. For a more complete discussion
 see~\citet{DoneaHuerta2003}.  The pressure stabilized method that we
 consider involves:
@@ -274,7 +275,7 @@ consider involves:
   a(u, v) + b(v, p)
       &=  (f, v) \quad \forall \ v \in V_{h},
 \\
-  b(u, q) + \delta (\nabla{q},\nabla{p}) &=  \delta (f, \nabla q)
+  b(u, q) +  (\delta\nabla{q},\nabla{p}) &=   (f, \delta \nabla q)
 \quad \forall \ q \in \Pi_{h},
 \end{align}
 %
@@ -290,7 +291,7 @@ does violate consistency for orders~$k > 1$.
 Figure~\ref{code:terrel:var:stab} illustrates the
 addition of the stabilization terms to the standard weak form in
 Figure~\ref{code:terrel:var:mixed}.  Figure~\ref{tab:terrel:element_vars}
-summarizes the definitions for the STAB element.
+includes the definitions for the STAB element.
 
 \begin{figure}
 \begin{python}
@@ -328,20 +329,20 @@ where
    w^{n+1} = w^n + \rho u^n.
 \end{equation}
 %
-The pressure may be recovered from the auxiliary field $w$, via
-the relation $p = \nabla\cdot w - C$, where $C$ is an arbitrary
-constant (since the pressure field is only determined up to an
-arbitrary constant).  When computing the error in $p$, we subtract
-the average of $\nabla \cdot w$ to account for~$C$. The algorithm
-assumes $w^0 = 0$, solves~\eqref{eqn:terrel:IPStokes} and updates $w$
-via \eqref{eqn:terrel:IPStokes_update} at every step until $\|u^{n+1} -
-u^{n}\| < \epsilon$, where $\epsilon$ is a prescribed tolerance. This
-method involves only one function space, but it requires a higher-order
-continuous element and it solves the divergence-free criteria exactly.
-The iteration count and accuracy is dependent upon the penalty
-parameters $\rho$ and~$r$.  For our experiments we use $\rho = -r =
-1 \times 10^{3}$.  The implementation of this form is presented in
-Figure~\ref{code:terrel:var:ip}.
+The pressure may be recovered from the auxiliary field $w$ via $p =
+\nabla\cdot w - C$, where $C$ is an arbitrary constant (since the
+pressure field is only determined up to an arbitrary constant).
+When computing the error in $p$, we subtract the average of $\nabla
+\cdot w$ to account for~$C$. The algorithm initially assumes $w^0 =
+0$, and then solves~\eqref{eqn:terrel:IPStokes} and updates $w$ via
+\eqref{eqn:terrel:IPStokes_update}. The process is repeated until
+$\|u^{n+1} - u^{n}\| < \epsilon$, where $\epsilon$ is a prescribed
+tolerance. This method involves only one function space, but it
+requires a higher-order continuous element ($k \ge 4$) and it solves the
+divergence-free criteria exactly.  The iteration count and accuracy is
+dependent upon the penalty parameters $\rho$ and~$r$.  For our experiments
+we use $\rho = -r = 1 \times 10^{3}$.  The implementation of this form
+is presented in Figure~\ref{code:terrel:var:ip}.
 %
 \begin{figure}
 \begin{python}
@@ -482,16 +483,16 @@ and use the following analytical solution:
       28\pi^2\sin(4\pi x)\cos(4\pi y)
       \\
       -36\pi^2\cos(4\pi x)\sin(4\pi y)
-    \end{bmatrix}
+    \end{bmatrix},
 \\
   u &=
   \begin{bmatrix}
     \sin(4\pi x)\cos(4\pi y)
       \\
      -\cos(4\pi x)\sin(4\pi y)
-   \end{bmatrix}
+   \end{bmatrix},
 \\
-  p &= \pi\cos(4\pi x)\cos(4\pi y)
+  p &= \pi\cos(4\pi x)\cos(4\pi y).
 \end{align}
 %
 We consider a lid driven cavity problem with a quadratic
@@ -499,15 +500,15 @@ driving function on the top (see Figures~\ref{fig:terrel:meshsolution}(b)
 and~\ref{fig:terrel:meshsolution}(c)).
 
 Figures~\ref{code:terrel:domain:test} and~\ref{code:terrel:domain:lid}
-show the \dolfin{} Python input for the considered problems.  To change from
-the analytical test problem to the lid driven cavity, only a change in
-the boundary condition functions and the right-hand side $f$ are
-required.  The pressure field, which is determined only up to an arbitrary
-constant, is ``pinned'' at zero at one pressure degree of freedom.
-Given one of the above domains and one the defined variational problems,
-\dolfin{} will use \ffc{} and \fiat{} to generate the necessary computer
-code corresponding the to chosen formulation automatically, allowing
-for one script to test all the methods.
+show the \dolfin{} Python input for the considered problems.  To change
+from the analytical test problem to the lid driven cavity, only a
+change in the boundary condition functions and the right-hand side
+$f$ are required.  The pressure field, which is determined only up to
+an arbitrary constant, is ``pinned'' at zero at one pressure degree
+of freedom.  Given one of the above domains and one of the defined
+variational problems, \dolfin{} will use \ffc{} and \fiat{} to generate
+the necessary computer code automatically, allowing for one script to
+test all the methods.
 
 \begin{figure}
 \small
@@ -576,14 +577,13 @@ pin_val = Constant(mesh, 0.0)
 # Define the RHS
 f = Constant(mesh, (0.0, 0.0))
 \end{python}
-\caption{\dolfin{} code for defining the lid domain.}
+\caption{\dolfin{} code for defining the lid-driven cavity domain.}
 \label{code:terrel:domain:lid}
 \end{figure}
 
-
-In computing the error for the analytical problems in terms of function
+In computing the error for the analytical test cases in terms of function
 norms, the exact solution is interpolated using 10th Lagrange
-functions on cells. This code for computing the error is presented in
+functions on cells. The code for computing the error is presented in
 Figure~\ref{code:terrel:error}.
 
 \begin{figure}
@@ -657,11 +657,11 @@ failure to satisfy the LBB condition.
 \end{table}
 
 To further compare the methods, a number of error and performance measures
-for the case of a fourth-order velocity space with a suitable chosen
+for the case of a fourth-order velocity space with a suitably chosen
 pressure space are presented. The Crouzeix--Raviart and MINI elements
 are only implemented for low-order bases. For the sake of comparison,
-they are computed on a finer mesh that has a comparable number of DOFs to
-the fourth-order Taylor--Hood element.
+they are computed on a finer mesh that has a comparable number of
+degrees-of-freedom to the fourth-order Taylor--Hood element.
 
 Figure~\ref{fig:terrel:4th_Order:vel} compares the $L^{2}$ error in
 the velocity for the different methods. The velocity approximation
@@ -673,7 +673,7 @@ The $L^{2}$ norm of the divergence of the velocity field is presented
 in Figure~\ref{fig:terrel:4th_Order:div}.  The divergence error for
 the Crouzeix--Raviart and Scott--Vogelius are zero to within machine
 precision for all meshes, as predicted by theory. The divergence error
-for the MINI element is considerable greater than for the other methods.
+for the MINI element is considerably greater than that for the other methods.
 
 \begin{figure}
   \center\includegraphics[width=\largefig]{chapters/terrel/pdf/vel_4.pdf}
@@ -695,22 +695,22 @@ for the MINI element is considerable greater than for the other methods.
 
 Figure~\ref{fig:terrel:4th_Order:run} presents the run time for the
 various fourth-order cases.  All run times, using a 2.6 GHz Intel Xeon,
-measured the assembly and linear system solve time in the Python code. The
-time required for the code generation is assumed to be part of the compile
-time since the code is cached and only affects the first run of the
+measure the assembly and linear system solve time in the Python code. The
+time required for the code generation is assumed to be negligible since
+the generated code is cached and only affects the time for first run of a
 simulation; our timings always come from the second run of the simulation.
 Run times for the mixed elements scale with the the number of degrees of
-freedom; however, the Scott--Vogelius method has better properties for
-iterative solvers, hence it may be attractive for large scale problems
-despite the increased run time for the small problems tested.
+freedom. The Scott--Vogelius method has better properties for iterative
+solvers, hence it may be attractive for large-scale problems despite the
+greater run time relative to other methods for the small problems tested.
 
 \begin{figure}
   \center \includegraphics[width=\largefig]{chapters/terrel/pdf/run_4.pdf}
   \caption{Run times for the analytical test cases.  All velocity spaces,
     except Crouzeix--Raviart and MINI, are fourth-order and pressure
-    spaces are determined by the method. Crouzeix--Raviart and MINI
-    are computed on a finer mesh with a similar number of DOFs to
-    the fourth-order Taylor--Hood method. CR, TH, and SV refer to
+    spaces are determined by the method. Crouzeix--Raviart and MINI are
+    computed on a finer mesh with a similar number of degrees-of-freedom
+    to the fourth-order Taylor--Hood method. CR, TH, and SV refer to
     Crouzeix--Raviart, Taylor--Hood and Scott--Vogelius, respectively.}
   \label{fig:terrel:4th_Order:run}
 \end{figure}
@@ -744,8 +744,9 @@ fixed point iteration to converge.
 \section{Conclusions}
 
 Comparisons between different finite elements for the Stokes problem have
-been presented in this study, and demonstrate the flexibility offered by
-automated code generation for rapidly developing and comparing methods.
+been presented. The flexibility afforded by automated code generation
+has been demonstrated via the ease with which a solvers for a range
+of methods could be produced.
 The observed convergence rates for all cases are consistent with \emph{a
 priori} estimates.  Of the elements examined, the Crouzeix--Raviart
 element and the Scott--Vogelius lead to the smallest divergence error.
