Sign fixes in terrel. Thanks to Marie.

--- a/book.tex
+++ b/book.tex
@@ -72,7 +72,7 @@
 
 \part{Applications}
 
-%%%\fenicsinput{terrel}
+\fenicsinput{terrel}
 \fenicsinput{kvs-1}
 \fenicsinput{mortensen}
 %\input{unfinished/hoffman-1/chapter.tex}
