--- a/unfinished/terrel/chapter.tex
+++ b/unfinished/terrel/chapter.tex
@@ -22,7 +22,7 @@ flows. For a domain $\Omega \subset \mathbb{R}^{d}$, where $1 \le d \le 3$,
 the Stokes equations read:
 %
 \begin{align}
-     -\Delta u + \nabla p &= f \quad \mbox{in} \ \Omega,
+     -\Delta u - \nabla p &= f \quad \mbox{in} \ \Omega,
 \label{eqn:terrel:StrongStokes}
 \\
       \nabla\cdot u &= 0 \quad \mbox{in} \ \Omega,
@@ -136,7 +136,7 @@ W = V * Q
 (u, p) = TrialFunctions(W)
 
 # Define the variational problems
-a = inner(grad(v), grad(u))*dx - div(v)*p*dx + q*div(u)*dx
+a = inner(grad(v), grad(u))*dx + div(v)*p*dx + q*div(u)*dx
 L = inner(v, f)*dx
 \end{python}
 \caption{Generic \ufl{} input for the mixed Stokes problem.}
