Add comment on sign of pressure in [terrel].

--- a/unfinished/terrel/chapter.tex
+++ b/unfinished/terrel/chapter.tex
@@ -31,9 +31,12 @@ the Stokes equations read:
       u &= 0 \quad \mbox{on} \  \partial \Omega,
 \end{align}
 %
-where $u : \Omega \rightarrow \mathbb{R}^{d}$ is the velocity field, $p
-: \Omega \rightarrow \mathbb{R}$ is the pressure field and $f : \Omega
-\rightarrow \mathbb{R}^{d}$ is a source term.
+where $u : \Omega \rightarrow \mathbb{R}^{d}$ is the velocity field,
+$p : \Omega \rightarrow \mathbb{R}$ is the pressure field and $f :
+\Omega \rightarrow \mathbb{R}^{d}$ is a source term. The sign of the
+pressure term in~\eqref{eqn:terrel:StrongStokes} is the opposite of what
+is commonly used. We chose this form as it will lead to a symmetric
+matrix operator.
 
 In developing a variational formulation for solving the Stokes equations,
 a possibility is to search for solutions to a variational formulation of
