Not sure what happened with last commit.

--- a/unfinished/terrel/chapter.tex
+++ b/unfinished/terrel/chapter.tex
@@ -34,9 +34,10 @@ the Stokes equations read:
 where $u : \Omega \rightarrow \mathbb{R}^{d}$ is the velocity field,
 $p : \Omega \rightarrow \mathbb{R}$ is the pressure field and $f :
 \Omega \rightarrow \mathbb{R}^{d}$ is a source term. The sign of the
-pressure term in~\eqref{eqn:terrel:StrongStokes} is the opposite of what
-is commonly used. We chose this form as it will lead to a symmetric
-matrix operator.
+pressure term in~\eqref{eqn:terrel:StrongStokes} is the opposite of
+what is commonly used in fluid mechanics literature. We use the form
+in~\eqref{eqn:terrel:StrongStokes} as it will lead to a symmetric matrix
+operator.
 
 In developing a variational formulation for solving the Stokes equations,
 a possibility is to search for solutions to a variational formulation of
