Lots of small edits in [terrel]: notation fixes and typos. Moved from unfinished to chapters but still not included, see editor notes.

--- a/book.tex
+++ b/book.tex
@@ -40,7 +40,7 @@
 %------------------------------------------------------------------------------
 
 % Use to test individual chapter
-%\fenicsinput{langtangen}\end{fullwidth}\end{document}
+%\fenicsinput{terrel}\end{fullwidth}\end{document}
 
 \input{chapters/intro/chapter.tex}
 \fenicsinput{langtangen}
