--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3671,11 +3671,33 @@ pages = {691}
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{HoffmanJanssonStockli2009,
+@ARTICLE{HoffmanJanssonStockli2011,
   author = {Hoffman, J. and Jansson, J. and St\"ockli, M.},
-  title = {Unified continuum modeling of 3D fluid-structure interaction},
-  journal = {SIAM Journal on Scientific Computing (in review)},
-  year = {2009}
+  title = {Unified continuum modeling of fluid-structure interaction},
+  journal = {Mathematical Models and Methods in Applied Sciences},
+  year = {2011},
+  timestamp = {2011.03.22}
+}
+
+@INPROCEEDINGS{SpalartMejia2011,
+  author = {Philippe R. Spalart and Kevin M. Mejia},
+  title = {Analysis of Experimental and Numerical Studies of the Rudimentary
+        Landing Gear},
+  booktitle = {49th AIAA Aerospace Sciences Meeting including the New Horizons \
+Forum
+        and Aerospace Exposition},
+  year = {2011},
+  number = {AIAA-2011-355}
+}
+
+@article{Hansbo2000,
+author = "P. Hansbo",
+title = "A Crank-Nicolson type space-time finite element method for computing 
+on moving meshes",
+journal = "Journal of Computational Physics",
+volume = 159,
+pages = {274-289},
+year = 2000
 }
 
 @ARTICLE{HoffmanJohnson2008,
@@ -3704,6 +3726,143 @@ pages = {691}
   pages = {2865--2880}
 }
 
+@ARTICLE{HoffmanJohnson2006b,
+  author = {Johan Hoffman and Claes Johnson},
+  title = {A new approach to Computational Turbulence Modeling},
+  journal = {Comput. Methods Appl. Mech. Engrg.},
+  year = {2006},
+  volume = {195},
+  pages = {2865--2880},
+  owner = {njansson},
+  timestamp = {2011.02.09}
+}
+
+@PHDTHESIS{Jansson2011,
+  author = {Niclas Jansson},
+  title = {High performance adaptive finite element methods for turbulent fluid
+	flow},
+  school = {Royal Institute of Technology},
+  year = {2011},
+  type = {Licentiate Thesis},
+  address = {School of Computer Science and Engineering},
+  note = {TRITA-CSC-A 2011:02},
+  owner = {njansson},
+  timestamp = {2011.02.10}
+}
+
+@MASTERSTHESIS{Jansson2008,
+  author = {Niclas Jansson},
+  title = {Adaptive Mesh Refinement for Large scale Parallel Computing with
+	{DOLFIN}},
+  school = {Royal Institute of Technology},
+  year = {2008},
+  address = {School of Computer Science and Engineering},
+  note = {TRITA-CSC-E 2008:051},
+  owner = {logg},
+  timestamp = {2009.06.07}
+}
+
+@INPROCEEDINGS{JanssonHoffman2009,
+  author = {N. Jansson and J. Hoffman},
+  title = {A computational study of turbulent flow separation for a circular
+	cylinder using skin friction boundary conditions},
+  booktitle = {Proceedings of Workshop for Quality and Reliability of Large-Eddy
+	Simulations II},
+  year = {2009}
+}
+
+@TECHREPORT{JanssonHoffmanJansson2010,
+  author = {Niclas Jansson and Johan Hoffman and Johan Jansson},
+  title = {Performance of {D}olfin and {U}nicorn on modern high-performance
+	distributed memory architectures},
+  institution = {Computational Technology Laboratory},
+  year = {2010},
+  number = {KTH-CTL-4012},
+  note = {\url{http://www.publ.kth.se/trita/ctl-4/012/}}
+}
+
+@INPROCEEDINGS{VilelaJanssonEtAl2010,
+  author = {R. Vilela de Abreu and N. Jansson and J. Hoffman},
+  title = {Adaptive computation of aeroacoustic sources for a 4-wheel rudimentary
+	landing gear benchmark problem},
+  booktitle = {Proc. Workshop on Benchmark Problems Airframe Noise Computation (BANC-I)},
+  year = {2010}
+}
+
+@article{Schumann1975,
+author = "U. Schumann",
+title = "Subgrid-sclae model for finite difference simulation of turbulent flows in plane channels and annuli",
+journal = "J. Comput. Phys.",
+volume = {18},
+pages = {376-404},
+year = "1975"
+}
+
+@book{Mccormick1995,
+author = "B. W. McCormick",
+title = "Aerodynamics, aeronautics and flight mechanics (2nd edition)",
+publisher = "John Wiley and sons", 
+year = "1995"
+}
+
+@article{PiomelliBalaras2002,
+author = "U. Piomelli and E. Balaras",
+title = "Wall-layer models for large-eddy simulations",
+journal = "Annu. Rev. Fluid Mech.",
+volume = {34},
+pages = {349-374},
+year = "2002"
+}
+
+@article{Stewartson1981,
+author = "K. Stewartson",
+title = "D'Alembert's Paradox",
+journal = "SIAM Review",
+volume = {23(3)},
+pages = {308-343},
+year = "1981"
+}
+
+@ARTICLE{ErikssonEstepEtAl1995,
+  author = {K. Eriksson and D. Estep and P. Hansbo and C. Johnson},
+  title = {Introduction to Adaptive Methods for Differential Equations},
+  journal = {Acta Numerica},
+  year = {1995},
+  volume = {4},
+  pages = {105--158},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@article{GilesSuli2002,
+author = "M. Giles and E. S{\" u}li",
+title = "Adjoint methods for PDEs: a posteriori error analysis and postprocessing by duality",
+journal = "Acta Numer.",
+volume = 11,
+pages = {145-236},
+year = 2002
+}
+
+
+@ARTICLE{HoffmanJansson2011,
+  author = {Johan Hoffman and Johan Jansson and Rodrigo Vilela de Abreu},
+  title = {Adaptive modeling of turbulent flow with residual based turbulent
+	kinetic energy dissipation},
+  journal = {Comput. Meth. Appl. Mech. Engrg.},
+  year = {in press},
+  owner = {njansson},
+  timestamp = {2011.02.09}
+}
+
+@INPROCEEDINGS{HoffmanJansson2009,
+  author = {J. Hoffman and N. Jansson},
+  title = {A computational study of turbulent flow separation for a circular
+	cylinder using skin friction boundary conditions},
+  booktitle = {Proceedings of Workshop for Quality and Reliability of Large-Eddy
+	Simulations II},
+  year = {2009}
+}
+
 @INBOOK{HoffmanJohnson2004,
   title = {Encyclopedia of Computational Mechanics, Volume 3, Chapter 7: Computability
 	and Adaptivity in {CFD}},
@@ -3712,6 +3871,32 @@ pages = {691}
   author = {J. Hoffman and C. Johnson},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@article{HoffmanJohnson2008b,
+author = "Johan Hoffman and Claes Johnson",
+title = "Resolution of d'Alembert's Paradox",
+journal = "J. Math. Fluid Mech.",
+volume = "Online First December 2008",
+year = "2008"
+}
+
+@INPROCEEDINGS{HronTurek2005,
+author       = {Hron, J. and Turek, S.},
+editor       = {Papadrakakis, M. and Onate, E. and Schrefler, B.},
+title        = {A Monolithic {FEM} Solver for {ALE} Formulation of Fluid Structure Interaction with Configurations for Numerical Benchmarking},
+booktitle        = {Computational Methods for Coupled Problems in Science and Engineering},
+year         = {2005},
+volume       = {First Edition},
+pages        = {148},
+note         = {Konferenzband `First International Conference on Computational Methods for Coupled Problems in Science and Engineering` (Santorini, May 25th - 27th)},
+}
+
+@inbook{DunneRannacher2006,
+author = "Dunne, T. and Rannacher, R.",
+title = "Adaptive finite element simulation of fluid structure interaction based on an Eulerian variational formulation",
+publisher = "Fluid-structure interaction: Modelling, Simulation, Springer (H.-J. Bungartz et al., eds), Springer",
+year = "2006"
 }
 
 @INPROCEEDINGS{HoffmanJohnsonLogg2004,
